# blacksheep-example-app

./: .gitignore  Makefile  README.md  app.dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  asgi.py  settings.py
app/connections/: __init__.py  postgres.py  redis.py
app/database/: __init__.py  postgres.py  redis.py
app/extensions/: __init__.py  context.py  prometheus.py
app/services/: __init__.py
app/services/features/: __init__.py  service.py  types.py
app/views/: __init__.py  features.py
migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_add_index.down.sql  0002_add_index.up.sql  0003_populate_database.down.sql  0003_populate_database.up.sql
tests/services/: test_features_service.py
