[tool.poetry]
name = "blacksheep-example"
version = "0.1.0"
description = "Example blacksheep application"
authors = ["Nikita Tomchik <cdayz@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
blacksheep = "^1.0.8"
blacksheep-prometheus = "^0.1.6"
blacksheep-context = "^0.1.0"
asyncpg = "^0.23.0"
aioredis = "^1.3.1"
environs = "^9.3.2"
msgpack = "^1.0.2"
uvicorn = "^0.14.0"
yoyo-migrations = "^7.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.5.0"
flake8-fixme = "^1.1.1"
flake8-pep3101 = "^1.3.0"
flake8-pytest = "^1.3"
flake8-walrus = "^1.1.0"
flake8-docstrings = "^1.6.0"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
